mobile layout overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,11 +87,12 @@ input::placeholder{
 .step-information{
     display: flex;
     max-width: 100%;
+    margin: -80px 0 80px;
     overflow: hidden;
 }
 .step-information > div{
     width: 90%;
-    margin: -80px 5% 0;
+    margin: 0 5%;
     flex-shrink: 0;
     transform: scale(1);
     padding: 30px 20px;
@@ -101,7 +102,7 @@ input::placeholder{
 
 /* Mobile layout differences */
 .step-type,
-.step-information-one footer{
+.step-information footer{
     display: none;
 }
 
@@ -114,8 +115,6 @@ body{
 }
 
 .side-bar{
-    position: relative;
-    z-index: 5;
     background: url(../images/bg-sidebar-mobile.svg) center no-repeat;
     background-size: cover;
     padding: 30px 0;
@@ -142,6 +141,12 @@ body{
     color: var(--marine-blue);
     background: var(--light-blue);
     border: none;
+}
+
+
+/* Step 1 */
+.step-information-one{
+    display: block;
 }
 
 /* Step 2 */
@@ -215,6 +220,7 @@ body{
     height: 15px;
     width: 15px;
     border-radius: 50%;
+    transition: all .4s;
 }
 
 /*Step 3*/
@@ -238,7 +244,8 @@ body{
 }
 .add-ons input{
     width: 20px;
-    margin: 0 10px 0 0;
+    height: 20px;
+    margin-right: 10px;
 }
 .add-ons h3{
     font-size: var(--fs-200);
@@ -248,11 +255,12 @@ body{
     font-size: var(--fs-100);
     font-weight: var(--fw-400);
     color: var(--purplish-blue);
+    margin-top: 5px;
 }
 .add-ons-opt p{
     font-size: var(--fs-100);
     font-weight: var(--fw-400);
-    color: var(--light-gray);
+    color: var(--cool-gray);
 }
 
 .primary-header{
@@ -272,12 +280,11 @@ body{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    position: absolute;
-    height: 10vh;
+    position: fixed;
+    bottom: 0;
     width: 100%;
     background: var(--white);
-    top: 90vh;
-    padding: 0 20px;
+    padding: 10px 20px;
 }
 .mobile-footer.j-between{
     justify-content: space-between;
@@ -287,6 +294,10 @@ body{
     border: none;
     font-size: var(--fs-200);
     color: var(--cool-gray);
+    transition: all .4s;
+}
+.go-back:hover{
+    color: var(--marine-blue);
 }
 .next-step-btn{
     border-radius: 5px;
@@ -297,6 +308,9 @@ body{
     background: var(--marine-blue);
     padding: 15px 20px;
 }
+.next-step-btn:hover{
+    background: hsl(213, 96%, 18%, 0.8);
+}
 
 @media (min-width: 750px) {
 
@@ -304,6 +318,10 @@ body{
     .step-type{
         display: block;
         width: 120px;
+    }
+    .step-information{
+        overflow: hidden;
+        margin: 0;
     }
 
     .mobile-footer{
@@ -327,7 +345,6 @@ body{
     }
 
     .side-bar{
-        z-index: 5;
         border-radius: 10px;
         background: url(../images/bg-sidebar-desktop.svg) no-repeat;
         background-size: cover;
@@ -365,17 +382,22 @@ body{
         margin: 0;
         border-radius: none;
     }
+    .step-information footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 77%;
+        position: fixed;
+        bottom: 0;
+        margin-bottom: 15px;
+    }
     .step-information-one footer{
         display: flex;
         justify-content: flex-end;
-        margin-top: 60px;
     }
 
     /* Step 2 */
-    .step-information-two footer{
-        display: flex;
-        margin-top: 50px;
-    }
+    
     .billing{
         flex-direction: row;
     }
